--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 /* Add more CSS here */
 
 html{
-    font-family: 'Gill Sans',  sans-serif;
+    font-family: 'Helvetica',  sans-serif;
+    margin: 0 20px;
 }
+
